# Pololu

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Pololu.atsln  Pololu.componentinfo.xml  Pololu.cppproj  azure-pipelines-hosted.yml  azure-pipelines.yml  pololu.atsln  pololu.code-workspace  pololu.componentinfo.xml  pololu.cppproj  process.md
app/: main.cpp
cmake/: avr.cmake
example/: CMakeLists.txt
example/inc/: whattotest.hpp
example/src/: main.cpp
gcc/: Makefile
hal/: CMakeLists.txt
hal/buttons/: CMakeLists.txt  button.cpp  buttonA.cpp  buttonA.h  buttonC.h  buttonFactory.cpp  buttonFactory.h  eButtonId.h  iButton.h
hal/buttons/inc/: button.h  button.hpp  buttonB.h
hal/buttons/src/: button.cpp  buttonB.cpp  buttonC.cpp  buttonFactory.cpp
hal/debug/: debug.cpp
hal/interface/: CMakeLists.txt
hal/interface/inc/: iButton.hpp  iDebug.hpp  iLcd.hpp  iLed.hpp  iMotor.hpp  iObserver.hpp  iPin.hpp  iPwm.hpp  iSensor.hpp  iSubject.hpp  iTimer.hpp
hal/lcd/: CMakeLists.txt
hal/lcd/inc/: lcd.hpp
hal/lcd/src/: lcd.cpp  lcdFactory.cpp
hal/leds/: CMakeLists.txt  eLedId.h  iLed.h  led.cpp  led.h  ledFactory.cpp  ledFactory.h
hal/leds/inc/: led.hpp
hal/leds/src/: led.cpp  ledFactory.cpp
hal/motors/: CMakeLists.txt  motor.cpp  motor.h  motorFactory.cpp
hal/motors/inc/: eMotorId.h  iMotor.h  motor.h  motor.hpp  motorFactory.h
hal/motors/src/: motor.cpp  motorFactory.cpp
hal/myDebug/: CMakeLists.txt
hal/myDebug/inc/: myDebug.h  myDebug.hpp
hal/myDebug/src/: debugFactory.cpp  myDebug.cpp
hal/pins/: CMakeLists.txt
hal/pins/inc/: pin.hpp
hal/pins/src/: pin.cpp  pinFactory.cpp
hal/pwm/: CMakeLists.txt
hal/pwm/inc/: pwm.hpp
hal/pwm/src/: pwm.cpp  pwmFactory.cpp
hal/sensors/: CMakeLists.txt
hal/sensors/inc/: proximitySensor.hpp  reflectanceSensor.hpp  sensor.hpp
hal/sensors/src/: proximitySensor.cpp  reflectanceSensor.cpp  sensor.cpp  sensorFactory.cpp
hal/timers/: CMakeLists.txt
hal/timers/inc/: timer.hpp
hal/timers/src/: timer.cpp  timerFactory.cpp
hw/: CMakeLists.txt
hw/adcs/: CMakeLists.txt  adc.cpp  adc.h  eAdcId.h
hw/adcs/inc/: adc.hpp
hw/adcs/src/: adc.cpp
hw/button/: CMakeLists.txt
hw/button/inc/: buttonHw.hpp
hw/button/src/: buttonHw.cpp  buttonHwFactory.cpp
hw/buttons/: CMakeLists.txt
hw/hd44780/: CMakeLists.txt
hw/hd44780/inc/: hd44780.hpp  hd44780Base.hpp
hw/hd44780/src/: hd44780.cpp  hd44780Base.cpp  hd44780Factory.cpp
hw/interface/: CMakeLists.txt
hw/interface/inc/: iAdc.hpp  iButtonHw.hpp  iInterrupt.hpp  iLcdHw.hpp  iParallel4bit.hpp  iPinHw.hpp  iTimer.hpp  iTimerHw.hpp  iUart.hpp
hw/interrupts/: CMakeLists.txt
hw/interrupts/inc/: pinChangeInt.hpp
hw/interrupts/src/: pinChangeInt.cpp
hw/lcd/: CMakeLists.txt
hw/lcd/inc/: hd44780.hpp  lcdHw.hpp
hw/lcd/src/: hd44780.cpp  hd44780Factory.cpp  lcdHw.cpp  lcdHwFactory.cpp
hw/parallel4bit/: CMakeLists.txt
hw/parallel4bit/inc/: parallel4bit.hpp
hw/parallel4bit/src/: parallel4bit.cpp  parallel4bitFactory.cpp
hw/pins/: CMakeLists.txt  ePinId.h  pin.cpp  pinFactory.h
hw/pins/inc/: iPin.h  pin.h  pinHw.hpp  pinPortMap.hpp
hw/pins/src/: hwPinFactory.cpp  pinFactory.cpp  pinHw.cpp  pinPortMap.cpp
hw/sensors/: CMakeLists.txt  eSensorId.h  iSensor.h  proximitySensor.cpp  reflectanceSensor.h  sensor.cpp
hw/sensors/inc/: iSensor.h  proximitySensor.h  sensor.h  sensorFactory.h
hw/sensors/src/: reflectanceSensor.cpp  sensorFactory.cpp
hw/timers/: CMakeLists.txt  timer0.cpp  timer0.h  timer1.cpp  timer1.h  timer2.cpp  timer2.h  timerFactory.cpp
hw/timers/inc/: eTimerId.h  iTimer.h  iTimerHwData.hpp  timer0.h  timer0.hpp  timer1.h  timer1.hpp  timer2.hpp  timerFactory.h  timerHw.hpp  timerHwData.hpp
hw/timers/src/: timer0.cpp  timer1.cpp  timer2.cpp  timerHw.cpp  timerHwData.cpp  timerHwDataFactory.cpp  timerHwFactory.cpp
hw/uart/: CMakeLIsts.txt  CMakeLists.txt
hw/uart/inc/: uart.h  uart.hpp
hw/uart/src/: uart.cpp  uartFactory.cpp
unitTest/: CMakeLists.txt
unitTest/app/: main.cpp  tests.cpp
unitTest/cmake/: config-gtest.cmake  setup.cmake
unitTest/mocks/: CMakeLists.txt
unitTest/mocks/hal/: mockiButton.hpp  mockiDebug.hpp  mockiLed.hpp  mockiMotor.hpp  mockiObserver.hpp  mockiPin.hpp  mockiSensor.hpp  mockiTimer.hpp
unitTest/mocks/hw/: MockiAdc.hpp  MockiPin.hpp  MockiTimerHw.hpp  MockiUart.hpp  mockiAdc.hpp  mockiButtonHw.hpp  mockiPinHw.hpp  mockiTimerHw.hpp  mockiUart.hpp
unitTest/mocks/inc/: mockIAdc.hpp  mockIPin.hpp  mockIPinHw.hpp  mockITimer.hpp  mockIUart.hpp
unitTest/tests/: CMakeLists.txt  whattotest_tests.hpp
unitTest/tests/inc/: buttons_tests.hpp  debug_tests.hpp  leds_tests.hpp  pins_tests.hpp
utils/interface/: CMakeLists.txt
utils/interface/inc/: iObserver.hpp  iSubject.hpp
utils/subject/: CMakeLists.txt
utils/subject/inc/: subject.hpp
utils/subject/src/: subject.cpp
